# claude-code-rate-watcher

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  Package.resolved  Package.swift  README.md
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
Sources/CCRWCore/: AuthStore.swift  ClaudeCLI.swift  Debouncer.swift  FileWatcherService.swift  HistoryAggregator.swift  HistorySnapshot.swift  HistoryStore.swift  Models.swift  RateLimitService.swift  SessionParser.swift  StatuslineService.swift  UsageCalculator.swift
Sources/ccrw/: AppDelegate.swift  AppState.swift  BuildInfo.swift  CCRWApp.swift  LaunchAtLoginService.swift  NotificationService.swift  PopoverRootView.swift  StatusBarController.swift  StatusIconFactory.swift  UpdaterService.swift  UsageHistoryChart.swift  main.swift
Tests/CCRWCoreTests/: HistoryAggregatorTests.swift  HistoryStoreTests.swift  RateLimitServiceTests.swift  SessionParserTests.swift  StatuslineAndAuthTests.swift  TestDoubles.swift  UsageCalculatorTests.swift
assets/: AppIcon.icns
docs/: index.html  popover-concepts.html  thanks.html
docs/mockups/: README.md  ui-concepts.css  ui-concepts.html
scripts/: build_app.sh  package_release.sh
src/: api_client.rs  app_bundle.rs  auth.rs  autolaunch.rs  codex_parser.rs  codex_rate.rs  dashboard.html  dashboard.rs  file_watcher.rs  history_recorder.rs  icon.rs  main.rs  notification.rs  popover.html  session_parser.rs  statusline.rs  supabase_auth.rs  supabase_client.rs  tray.rs  updater.rs  usage_tracker.rs
(+2 files in other folders)
