[package]
name = "claude-code-rate-watcher"
version = "0.6.6"
edition = "2024"

[[bin]]
name = "ccrw"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
tao = "0.31"
wry = "0.47"
notify = "7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
notify-rust = "4"
ureq = { version = "3", features = ["json"] }
semver = "1"
flate2 = "1"
tar = "0.4"
libc = "0.2"
